增加WiFiManager来设置WiFi和设备相关信息，无需写死到代码中。更新STL文件。

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,6 @@ lib_deps =
 	mathertel/RotaryEncoder@^1.5.3
 	erriez/ErriezCRC32@^1.0.1
 	bblanchon/ArduinoJson@^7.0.3
+	wnatth3/WiFiManager@^2.0.16-rc.2
+build_flags =
+	-DWM_NOHELP
