--- a/platformio.ini
+++ b/platformio.ini
@@ -22,3 +22,7 @@ lib_deps =
 	wnatth3/WiFiManager@^2.0.16-rc.2
 build_flags =
 	-DWM_NOHELP
+	-D'WM_STRINGS_FILE="../../../../src/wm_strings_cn.h"'
+	-DUSE_DEEP_SLEEP
+	-DDEEPSLEEP_TIME=60000
+	; -DTFT_SPEED_TEST
