--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,8 @@ lib_deps =
 build_flags =
 	-DWM_NOHELP
 	-D'WM_STRINGS_FILE="../../../../src/wm_strings_cn.h"'
-	-DUSE_DEEP_SLEEP
-	-DDEEPSLEEP_TIME=60000
+	; -DUSE_DEEP_SLEEP
+	; -DDEEPSLEEP_TIME=60000
+	; -DPOWER_DETECT
+	; -DBOARD_V1
 	; -DTFT_SPEED_TEST
