用宏定义来定义WiFi重连和查找雅图伴侣的时间

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,12 +19,13 @@ lib_deps =
 	mathertel/RotaryEncoder@^1.5.3
 	erriez/ErriezCRC32@^1.0.1
 	bblanchon/ArduinoJson@^7.0.3
-	wnatth3/WiFiManager@^2.0.16-rc.2
+	git@github.com:tzapu/WiFiManager.git#v2.0.17
 build_flags =
 	-DWM_NOHELP
 	-D'WM_STRINGS_FILE="../../../../src/wm_strings_cn.h"'
 	-DUSE_DEEP_SLEEP
 	-DDEEPSLEEP_TIME=60000
 	-DPOWER_DETECT
+	-DMCAST_TIMEOUT=10000
 	; -DBOARD_V1
 	; -DTFT_SPEED_TEST
