增加WiFi强度显示，采用自己修改过的WiFiManager

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ lib_deps =
 	mathertel/RotaryEncoder@^1.5.3
 	erriez/ErriezCRC32@^1.0.1
 	bblanchon/ArduinoJson@^7.0.3
-	git@github.com:tzapu/WiFiManager.git#v2.0.17
+	git@github.com:zenz/WiFiManager.git
 build_flags =
 	-DWM_NOHELP
 	-D'WM_STRINGS_FILE="../../../../src/wm_strings_cn.h"'
