增加中文操作提示，修正序列号小写被写成密码小写问题。

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ lib_deps =
 build_flags =
 	-DWM_NOHELP
 	-D'WM_STRINGS_FILE="../../../../src/wm_strings_cn.h"'
+	-DUSE_CHINESE
 	-DUSE_DEEP_SLEEP
 	-DDEEPSLEEP_TIME=60000
 	-DPOWER_DETECT
