完善代码以及更改图标

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,5 +28,6 @@ build_flags =
 	-DDEEPSLEEP_TIME=60000
 	-DPOWER_DETECT
 	-DMCAST_TIMEOUT=10000
-	; -DBOARD_V1
+	-DWIFI_SIGNAL_UPDATE_TIME=2000
+	-DBOARD_V1
 	; -DTFT_SPEED_TEST
