--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@ build_flags =
 	-DDEEPSLEEP_TIME=60000
 	-DPOWER_DETECT
 	-DMCAST_TIMEOUT=10000
-	-DWIFI_SIGNAL_UPDATE_TIME=2000
-	-DBOARD_V1
+	-DWIFI_SIGNAL_UPDATE_TIME=5000
+	-DDEBUG_ENABLED
+	; -DBOARD_V1
 	; -DTFT_SPEED_TEST
